# NUMA-aware-DSU

./: .gitignore  CLI11.cmake  CMakeLists.txt  DSU.cpp  DSU.h  Gtest.cmake  Queue.h  README.md  benchmark  benchmark.cpp  benchmark_components.cpp  benchmark_mst.cpp  benchmark_splitted.cpp  fancy.cpp  fancy_test.cpp  graphs.h  main.cpp  mst.cpp  test.cpp
implementations/: DSU_Adaptive.h  DSU_AdaptiveLocks.h  DSU_AdaptiveSmart.h  DSU_CircularBuffer.h  DSU_FC.h  DSU_FC_honest.h  DSU_FC_on_seq.h  DSU_Helper.h  DSU_LazyUnion.h  DSU_NoSync_Parts.h  DSU_NoSync_Parts_NoImm.h  DSU_No_Sync.h  DSU_No_Sync_noimm.h  DSU_ParallelUnions.h  DSU_ParallelUnions_no_imm.h  DSU_Parts.h  DSU_Parts_NoImm.h  DSU_Queue.h  DSU_Sequential.h  DSU_SyncOnNode.h  DSU_Usual.h  DSU_Usual_malloc.h  DSU_Usual_noimm.h  DSU_WireHelping.h  SeveralDSU.h  TwoDSU.h
lib/: benchmark.hpp  csv.hpp  graphs.h  hist_csv.hpp  metrics.cpp  metrics.hpp  mtx_reader.hpp  numa.hpp  nwire.hpp  parameters.hpp  splitmix64.hpp  timer.hpp  util.cpp  util.hpp  workload.hpp  workload_provider.hpp
postprocess/: DSUs.ipynb
postprocess/measurements/: cohist-out.csv  cohists-out-new.csv  cohists-out-staged.csv  hists-out-new.csv  hists-out-staged.csv  hists-out.csv  out-new-2.csv  out-new-with-metrics.csv  out-new.csv  out-old.csv  out-old10.csv  out-old11.csv  out-old2.csv  out-old3.csv  out-old4.csv  out-old6.csv  out-old7.csv  out-old8.csv  out-old9.csv  out-shuffled-with-metrics.csv  out-shuffled-without-metrics.csv  out-smart-shuffled-with-metrics.csv  out-smart-shuffled-without-metrics.csv  out-staged-16M.csv  out-staged-4M.csv  out-staged-old1.csv  out-staged.csv  out-with-metrics.csv  out-with-metrics2.csv  out-with-metrics3.csv  out-with-metrics4.csv  out.txt
utils/ConcurrencyFreaks/queues/: MichaelScottQueue.hpp
utils/ConcurrencyFreaks/queues/array/: FAAArrayQueue.hpp
workloads/: components_v2.hpp  external.hpp  trash.hpp
